@@ -57,7 +57,14 @@ class CortexXDRParser(ApiParser):
         self.cortex_xdr_apikey = data["cortex_xdr_apikey"]
         self.cortex_xdr_alerts_timestamp = data.get("cortex_xdr_alerts_timestamp")
         self.cortex_xdr_incidents_timestamp = data.get("cortex_xdr_incidents_timestamp")
-        self.cortex_xdr_advanced_token = data.get("cortex_xdr_advanced_token")
+        self.cortex_xdr_advanced_token = data.get("cortex_xdr_advanced_token", False)
+
+        # Remove potential scheme from URL
+        self.cortex_xdr_host = self.cortex_xdr_host.split("://")[-1]
+        # Strip '/' from beginning and end of host
+        self.cortex_xdr_host = self.cortex_xdr_host.strip("/")
+        # Remove potential 'api-' prefix from hostname, will be added automatically (removeprefix is python3.9+)
+        self.cortex_xdr_host = self.cortex_xdr_host.removeprefix("api-")
 
         self.session = None
 
@@ -80,14 +87,15 @@ class CortexXDRParser(ApiParser):
         try:
             if self.session is None:
                 self.session = requests.Session()
+                logger.debug(f"[{__parser__}]:connect: Initialising session...", extra={'frontend': str(self.frontend)})
 
                 if self.cortex_xdr_advanced_token:
                     nonce = ''.join(
-                        [secrets.choice(string.ascii_letters + string.digits) for _ in range(64)])  # import secrets
-                    timestamp = int(timezone.now().timestamp()) * 1000  # from datetime import datetime, timezone
+                        [secrets.choice(string.ascii_letters + string.digits) for _ in range(64)])
+                    timestamp = int(timezone.now().timestamp()) * 1000
 
                     auth_key = f"{self.cortex_xdr_apikey}{nonce}{timestamp}".encode('utf-8')
-                    auth_key = hashlib.sha256(auth_key).hexdigest()  # import hashlib
+                    auth_key = hashlib.sha256(auth_key).hexdigest()
 
                     self.session.headers.update({'Authorization': str(auth_key)})
                     self.session.headers.update({'x-xdr-auth-id': str(self.cortex_xdr_apikey_id)})
@@ -123,8 +131,6 @@ class CortexXDRParser(ApiParser):
             }
 
     def get_logs(self, kind, nb_from=0, since=None, test=False):
-        self._connect()
-
         url = self.event_kinds[kind]['url']
 
         params = {'request_data':
@@ -147,7 +153,7 @@ class CortexXDRParser(ApiParser):
         logger.debug(f"[{__parser__}]:get_logs: {msg}", extra={'frontend': str(self.frontend)})
 
         retry = 1
-        while retry <= 3:
+        while retry <= 3 and not self.evt_stop.is_set():
             self._connect()
 
             response = self.session.post(
@@ -158,83 +164,86 @@ class CortexXDRParser(ApiParser):
             )
 
             if response.status_code == 401:
-                logger.info(f"[{__parser__}]:get_logs: Refresh token.", extra={'frontend': str(self.frontend)})
+                logger.warning(f"[{__parser__}]:get_logs: Could not authenticate: {response.content}", extra={'frontend': str(self.frontend)})
+                logger.warning(f"[{__parser__}]:get_logs: Session has been reset", extra={'frontend': str(self.frontend)})
                 self.session = None
                 retry += 1
                 continue
             else:
                 break
 
-        if response.status_code == 401:
-            return False, _('Authentication failed')
+        if response:
+            if response.status_code == 401:
+                raise CortexXDRAPIError( _('Authentication failed'))
 
-        if response.status_code != 200:
-            error = f"Error at CortexXDR API Call: {response.content}"
-            logger.error(f"[{__parser__}]:get_logs: {error}", extra={'frontend': str(self.frontend)})
-            raise CortexXDRAPIError(error)
+            if response.status_code != 200:
+                error = f"Error at CortexXDR API Call: {response.content}"
+                logger.error(f"[{__parser__}]:get_logs: {error}", extra={'frontend': str(self.frontend)})
+                raise CortexXDRAPIError(error)
 
-        content = response.json()
+            return response.json()
+        else:
+            return None
 
-        return True, content
+    def format_log(self, log, kind):
+        log['kind'] = kind
+
+        log_timestamp = log.get(self.event_kinds[kind]['time_field'], log.get(self.event_kinds[kind]['default_time_field']))
+        if isinstance(log_timestamp, list) and len(log_timestamp) > 0:
+            log_timestamp = log_timestamp[0]
+
+        log['timestamp'] = datetime.fromtimestamp(log_timestamp/1000, tz=timezone.utc).isoformat()
+
+        # Get first occurence of lists to keep retro-compatibility with actual parser
+        # Actual mapping fields
+        tracking_fields = ['agent_version', 'action_remote_ip', 'action_remote_port', 'dns_query_name', 'event_timestamp', 'module_id', 'host_ip', 'agent_os_sub_type', 'action_file_name', 'action_file_path', 'action_file_md5', 'action_file_sha256', 'event_type', 'action_country', 'action_external_hostname', 'action_process_causality_id', 'action_process_image_command_line', 'action_process_image_name', 'action_process_image_sha256', 'action_process_instance_id', 'action_process_signature_status', 'action_process_signature_vendor', 'actor_causality_id', 'actor_process_causality_id', 'agent_host_boot_time', 'agent_is_vdi', 'association_strength', 'bioc_indicator', 'end_match_attempt_ts', 'event_id', 'story_id', 'action_local_port', 'actor_process_command_line', 'actor_process_image_name', 'actor_process_image_path', 'actor_process_instance_id', 'actor_process_os_pid', 'actor_process_image_md5', 'actor_process_image_sha256', 'actor_process_signature_status', 'actor_process_signature_vendor', 'actor_thread_thread_id', 'causality_actor_causality_id', 'causality_actor_process_command_line', 'causality_actor_process_execution_time', 'causality_actor_process_image_md5', 'causality_actor_process_image_name', 'causality_actor_process_image_path', 'causality_actor_process_image_sha256', 'causality_actor_process_signature_status', 'causality_actor_process_signature_vendor', 'action_registry_data', 'action_registry_key_name', 'action_registry_value_name', 'action_local_ip', 'mitre_tactic_id_and_name', 'mitre_technique_id_and_name']
+        truncated_lists_fields = set()
+        for k, v in log.items():
+            if k in tracking_fields and isinstance(v, list):
+                if len(v) == 0:
+                    log[k] = None
+                else:
+                    if len(v) > 1:
+                        truncated_lists_fields.add(k)
+                        logger.info(f"[{__parser__}]:format_log: field '{k}' has more than one occurrence. The first is kept, the others will be ignored.",
+                                    extra={'frontend': str(self.frontend)})
+                    log[k] = v[0]
+        log["truncated_lists_fields"] = list(truncated_lists_fields)
+
+        return json.dumps(log)
+
 
     def execute(self):
         for kind in self.event_kinds.keys():
             logger.info(f"[{__parser__}]:execute: Getting {kind}", extra={'frontend': str(self.frontend)})
             cpt = 0
             total = 1
-            while cpt < total:
-                status, tmp_logs = self.get_logs(kind, nb_from=cpt, since=getattr(self, f"cortex_xdr_{kind}_timestamp"))
+            while cpt < total and not self.evt_stop.is_set():
+                reply_obj = self.get_logs(kind, nb_from=cpt, since=getattr(self, f"cortex_xdr_{kind}_timestamp"))
 
-                if not status:
-                    raise CortexXDRAPIError(tmp_logs)
+                if reply_obj:
+                    reply = reply_obj.get('reply', {})
 
-                # Downloading may take some while, so refresh token in Redis
-                self.update_lock()
+                    # Downloading may take some while, so refresh token in Redis
+                    self.update_lock()
 
-                total = tmp_logs['reply']['total_count']
-                cpt += tmp_logs['reply']['result_count'] + 1
-                logs = tmp_logs['reply'][kind]
+                    total = int(reply['total_count'])
+                    cpt += int(reply['result_count']) + 1
+                    logs = reply[kind]
 
-                def format_log(log):
-                    log['kind'] = kind
+                    self.write_to_file([self.format_log(log, kind) for log in logs])
+                    # Writting may take some while, so refresh token in Redis
+                    self.update_lock()
 
-                    log_timestamp = log.get(self.event_kinds[kind]['time_field'], log.get(self.event_kinds[kind]['default_time_field']))
-                    if isinstance(log_timestamp, list) and len(log_timestamp) > 0:
-                        log_timestamp = log_timestamp[0]
-
-                    log['timestamp'] = datetime.fromtimestamp(log_timestamp/1000, tz=timezone.utc).isoformat()
-
-                    # Get first occurence of lists to keep retro-compatibility with actual parser
-                    # Actual mapping fields
-                    tracking_fields = ['agent_version', 'action_remote_ip', 'action_remote_port', 'dns_query_name', 'event_timestamp', 'module_id', 'host_ip', 'agent_os_sub_type', 'action_file_name', 'action_file_path', 'action_file_md5', 'action_file_sha256', 'event_type', 'action_country', 'action_external_hostname', 'action_process_causality_id', 'action_process_image_command_line', 'action_process_image_name', 'action_process_image_sha256', 'action_process_instance_id', 'action_process_signature_status', 'action_process_signature_vendor', 'actor_causality_id', 'actor_process_causality_id', 'agent_host_boot_time', 'agent_is_vdi', 'association_strength', 'bioc_indicator', 'end_match_attempt_ts', 'event_id', 'story_id', 'action_local_port', 'actor_process_command_line', 'actor_process_image_name', 'actor_process_image_path', 'actor_process_instance_id', 'actor_process_os_pid', 'actor_process_image_md5', 'actor_process_image_sha256', 'actor_process_signature_status', 'actor_process_signature_vendor', 'actor_thread_thread_id', 'causality_actor_causality_id', 'causality_actor_process_command_line', 'causality_actor_process_execution_time', 'causality_actor_process_image_md5', 'causality_actor_process_image_name', 'causality_actor_process_image_path', 'causality_actor_process_image_sha256', 'causality_actor_process_signature_status', 'causality_actor_process_signature_vendor', 'action_registry_data', 'action_registry_key_name', 'action_registry_value_name', 'action_local_ip', 'mitre_tactic_id_and_name', 'mitre_technique_id_and_name']
-                    truncated_lists_fields = set()
-                    for k, v in log.items():
-                        if k in tracking_fields and isinstance(v, list):
-                            if len(v) == 0:
-                                log[k] = None
-                            else:
-                                if len(v) > 1:
-                                    truncated_lists_fields.add(k)
-                                    logger.error(f"[{__parser__}]:format_log: WARNING: field '{k}' has more than one occurrence. The first is kept, the others will be ignored.",
-                                             extra={'frontend': str(self.frontend)})
-                                log[k] = v[0]
-                    log["truncated_lists_fields"] = list(truncated_lists_fields)
-
-                    return json.dumps(log)
-
-                self.write_to_file([format_log(log) for log in logs])
-                # Writting may take some while, so refresh token in Redis
-                self.update_lock()
-
-                if len(logs) > 0:
-                    # Replace "Z" by "+00:00" for datetime parsing
-                    # No need to make_aware, date already contains timezone
-                    # add 1 (ms) to timestamp to avoid getting last alert again
-                    try:
-                        setattr(self.frontend, f"cortex_xdr_{kind}_timestamp", datetime.fromtimestamp((logs[-1][self.event_kinds[kind]['time_field']]+1)/1000, tz=timezone.utc))
-                    except Exception:
-                        msg = f"Could not locate key '{self.event_kinds[kind]['time_field']}' from following log: {logs[-1]}"
-                        logger.error(f"[{__parser__}]:execute: {msg}",
-                                     extra={'frontend': str(self.frontend)})
+                    if len(logs) > 0:
+                        # Replace "Z" by "+00:00" for datetime parsing
+                        # No need to make_aware, date already contains timezone
+                        # add 1 (ms) to timestamp to avoid getting last alert again
+                        try:
+                            setattr(self.frontend, f"cortex_xdr_{kind}_timestamp", datetime.fromtimestamp((logs[-1][self.event_kinds[kind]['time_field']]+1)/1000, tz=timezone.utc))
+                        except Exception:
+                            msg = f"Could not locate key '{self.event_kinds[kind]['time_field']}' from following log: {logs[-1]}"
+                            logger.error(f"[{__parser__}]:execute: {msg}",
+                                         extra={'frontend': str(self.frontend)})
 
         logger.info("CortexXDR parser ending.", extra={'frontend': str(self.frontend)})
