@@ -8,6 +8,8 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 ## [Unreleased]
 ### Added
 - [API_PARSER] [CORTEX_XDR] Add advanced token feature
+### Changed
+- [API_PARSER] [CORTEX_XDR] Improve logging and code quality
 
 
 ## [2.16.2] - 2024-11-13
